{
    "name": "Player_input",
    "maps": [
        {
            "name": "Player",
            "id": "8a7569c6-0e19-403d-9ffb-6980fa86e1a1",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "c8dc8f45-2c9d-47e6-8699-0be8ad5af714",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "f023953a-82d6-47e2-af22-270a3a9aa523",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchDirection",
                    "type": "PassThrough",
                    "id": "691ea764-71ed-4eab-8baf-faeaf1c7cbb6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Touch",
                    "type": "Value",
                    "id": "fa2cbc5f-c5f8-4e9b-a0de-b3480a91c367",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e73c848a-2cc4-4752-9476-5c4e67200976",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ead50667-363a-479b-afe9-120ca9ac5e38",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2aaa60d-f625-4cf5-b393-9d823d6314c3",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TouchDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe9b419b-6c47-4b1d-9190-e6cd2ecaddd8",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "c2e3a561-0cde-415f-81ae-2ad891f2455e",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "a9ac0f6a-d804-411c-a615-4722f0b1a361",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "09f7cccc-4502-4e49-b308-8d87a60ae35c",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5693e57a-238a-46ed-b5ae-e64e6e574302",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47c2a644-3ebc-4dae-a106-589b7ca75b59",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}